--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-tutorial",
+  "name": "fuckyouWeb",
   "version": "0.0.0",
-  "description": "Code from the React tutorial.",
+  "description": "fuckyouWeb",
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.4.3",
@@ -12,21 +12,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/reactjs/react-tutorial.git"
-  },
-  "keywords": [
-    "react",
-    "tutorial",
-    "comment",
-    "example"
-  ],
-  "author": "petehunt",
-  "bugs": {
-    "url": "https://github.com/reactjs/react-tutorial/issues"
-  },
-  "homepage": "https://github.com/reactjs/react-tutorial",
   "engines" : {
     "node" : "0.12.x"
   }
