--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
     "formidable": "^1.0.17",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "mongoose": "^4.0.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
