--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-raml2html": "^0.3.2"
+    "grunt-raml2html": "^0.3.2",
+    "grunt-contrib-cssmin":"x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
