--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.4.3",
+    "cookie-parser": "^1.4.0",
     "express": "^4.4.5",
     "formidable": "^1.0.17",
-    "multer": "^1.1.0",
-    "mongoose": "^4.0.2"
+    "jquery-file-upload-middleware": "^0.1.7",
+    "mongoose": "^4.0.2",
+    "multer": "^1.1.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
