--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.4.3",
+    "chai": "^3.4.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.4.5",
     "express-logger": "0.0.3",
     "formidable": "^1.0.17",
     "jquery-file-upload-middleware": "^0.1.7",
+    "loadtest": "^1.3.0",
     "mongoose": "^4.0.2",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
@@ -24,7 +26,7 @@
     "grunt-raml2html": "^0.3.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -u tdd",
     "start": "node server.js"
   },
   "engines": {
