--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.0",
     "express": "^4.4.5",
     "express-logger": "0.0.3",
+    "express-session": "^1.12.1",
     "formidable": "^1.0.17",
     "jquery-file-upload-middleware": "^0.1.7",
     "loadtest": "^1.3.0",
