--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.4.3",
     "chai": "^3.4.0",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "^1.4.0",
     "express": "^4.4.5",
     "express-logger": "0.0.3",
