--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-logger": "0.0.3",
     "express-session": "^1.12.1",
     "formidable": "^1.0.17",
+    "http-proxy": "^1.12.0",
     "jade": "^1.11.0",
     "jquery-file-upload-middleware": "^0.1.7",
     "loadtest": "^1.3.0",
