--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "scripts": {
     "test": "mocha -u tdd",
-    "start": "node server.js"
+    "start dev": "nodemon app dev",
+    "start pro": "node app"
   },
   "engines": {
     "node": "0.12.x"
