--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "fuckyouWeb",
   "version": "1.0.0",
   "description": "fuckyouWeb",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "body-parser": "^1.4.3",
-    "chai": "^3.4.0",
     "connect-mongo": "^0.8.2",
     "cookie-parser": "^1.4.0",
     "csurf": "^1.8.3",
-    "expect.js": "^0.3.1",
     "express": "^4.4.5",
     "express-logger": "0.0.3",
     "express-session": "^1.12.1",
@@ -21,9 +19,12 @@
     "mongoose": "^4.0.2",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
-    "nodemailer": "^1.10.0"
+    "nodemailer": "^1.10.0",
+    "socket.io": "^1.4.4"
   },
   "devDependencies": {
+    "expect.js": "^0.3.1",
+    "chai": "^3.4.0",
     "grunt": "^0.4.5",
     "grunt-cafe-mocha": "^0.1.13",
     "grunt-contrib-cssmin": "x",
