--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "fuckyouWeb",
   "main": "app.js",
+  "scripts": {
+    "boot":"nodemon app dev"
+  },
   "dependencies": {
     "body-parser": "^1.4.3",
     "connect-mongo": "^0.8.2",
